--- a/CS41long_U1S2M1_Warmup_RJProctor.ipynb
+++ b/CS41long_U1S2M1_Warmup_RJProctor.ipynb
@@ -418,7 +418,7 @@
         "id": "0Nu13KL03S7m"
       },
       "source": [
-        "Convert Hex to Binary in Python\r\n",
+        "# [Convert Hex to Binary in Python](https://www.cs.princeton.edu/courses/archive/fall07/cos109/bc.html)\r\n",
         "\r\n"
       ],
       "execution_count": null,
